<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/movieNameTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#009688"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:text="Movie Name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/moviePosterImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/movieDescriptionTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/movieYearLaunchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_release_year"
        app:layout_constraintLeft_toRightOf="@+id/moviePosterImageView"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/movieRunTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/default_run_duration"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/movieYearLaunchTextView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/movieYearLaunchTextView" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        app:layout_constraintGuide_begin="180dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/movieRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_rating"
        app:layout_constraintLeft_toLeftOf="@+id/movieRunTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieRunTimeTextView" />

    <TextView
        android:id="@+id/movieMarkAsFavouritteTextView"
        android:layout_width="81dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_light"
        android:paddingLeft="5dp"
        android:text="@string/mark_as_favourite"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/movieReleaseDateTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateTextView"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/movieReleaseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/default_release_year"
        app:layout_constraintLeft_toLeftOf="@+id/movieRatingTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieRatingTextView" />

    <TextView
        android:id="@+id/movieDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:text="@string/default_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/movieMarkAsFavouritteTextView" />

</android.support.constraint.ConstraintLayout>